# ChangeLog for dev-java/javacup
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/ChangeLog,v 1.38 2015/08/08 12:56:22 sping Exp $

  08 Aug 2015; Sebastian Pipping <sping@gentoo.org>
  javacup-0.11b_beta20150326.ebuild,
  +files/javacup-0.11b_beta20150326-build-xml-svn.patch:
  Resolve calling of svn (bug #556998)

  08 Aug 2015; Sebastian Pipping <sping@gentoo.org>
  javacup-0.11b_beta20150326.ebuild, metadata.xml:
  Introduce use flag "system-jflex" to break circular dependency, address
  warning on dev-java/ant-core (by specifying slot 0 and also adding to DEPEND)

*javacup-0.11b_beta20150326 (07 Aug 2015)

  07 Aug 2015; Sebastian Pipping <sping@gentoo.org>
  +javacup-0.11b_beta20150326.ebuild,
  +files/javacup-0.11b_beta20150326-build-xml.patch:
  Bump to 0.11b_beta20150326 (bug #512642)

  11 Jul 2015; James Le Cuirot <chewi@gentoo.org> -javacup-0.10k-r1.ebuild,
  javacup-0.11a_beta20060608.ebuild:
  Drop java on ia64 and also drop old version.

  14 Jun 2013; Alexis Ballier <aballier@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  keyword ~amd64-fbsd, bug #472010

  05 Feb 2013; Rick Farina <zerochaos@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  adding ~arm

  15 Apr 2012; Mike Frysinger <vapier@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Add back ia64 love #349020 by Dennis Schridde.

  02 Jan 2012; Ralph Sennhauser <sera@gentoo.org> javacup-0.10k-r1.ebuild,
  javacup-0.11a_beta20060608.ebuild:
  Drop ia64 support #345433

  03 May 2011; Fabian Groffen <grobian@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Marked ~x64-freebsd

  16 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Marked ~x64-macos

  28 May 2010; Joseph Jezak <josejx@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Marked ppc stable for bug #312499.

  23 May 2010; Pacho Ramos <pacho@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  stable amd64, bug 312499
