@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/javacup-0.11b_beta20150326.ebuild,v 1.3 2015/08/08 12:56:22 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/javacup-0.11b_beta20150326.ebuild,v 1.4 2015/08/08 13:07:19 sping Exp $
 
 EAPI="5"
 
@@ -25,13 +25,11 @@ KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebs
 IUSE="userland_BSD system-jflex"
 
 # find for bug #214664
-CDEPEND=">=dev-java/ant-core-1.7.0:0"
 DEPEND=">=virtual/jdk-1.5
 	system-jflex? ( dev-java/jflex:0 )
 	!userland_BSD? ( >=sys-apps/findutils-4.4 )
-	${CDEPEND}"
-RDEPEND=">=virtual/jre-1.5
-	${CDEPEND}"
+	>=dev-java/ant-core-1.7.0:0"
+RDEPEND=">=virtual/jre-1.5"
 
 S="${WORKDIR}"
 
@@ -50,13 +48,15 @@ src_prepare() {
 }
 
 src_compile() {
-	eant -Dgentoo.classpath="$(java-pkg_getjars ant-core)"
+	local classpath="$(java-pkg_getjars --build-only ant-core)"
+
+	eant -Dgentoo.classpath="${classpath}"
 	rm bin/java-cup-11.jar || die
 	cp dist/java-cup-11b.jar bin/java-cup-11.jar || die
 	eant clean
 
 	einfo "Recompiling with newly generated javacup"
-	eant -Dgentoo.classpath="$(java-pkg_getjars ant-core)"
+	eant -Dgentoo.classpath="${classpath}"
 	use doc && javadoc -sourcepath src/ java_cup -d javadoc
 }
 
