@@ -6,8 +6,8 @@ HOMEPAGE=http://www2.cs.tum.edu/projects/cup/
 IUSE=userland_BSD system-jflex elibc_FreeBSD source doc elibc_FreeBSD
 KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-2
-RDEPEND=>=virtual/jre-1.5 >=dev-java/ant-core-1.7.0:0 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
+RDEPEND=>=virtual/jre-1.5 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
 SLOT=0
 SRC_URI=http://www2.cs.tum.edu/projects/cup/releases/java-cup-src-11b-20150326.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	1889f7787714c5f7e3b5bb1c2be07c1f	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=6f4a14489fae4a999d890860ccdcb742
+_md5_=9e552b272572198583c38ccbeda4d96e
