@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/javacup
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/ChangeLog,v 1.38 2015/08/08 12:56:22 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/ChangeLog,v 1.39 2015/08/08 13:07:19 sping Exp $
+
+  08 Aug 2015; Sebastian Pipping <sping@gentoo.org>
+  javacup-0.11b_beta20150326.ebuild:
+  Fix java-pkg_getjars approach (bug #556998 comment #5)
 
   08 Aug 2015; Sebastian Pipping <sping@gentoo.org>
   javacup-0.11b_beta20150326.ebuild,
